src/cart/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  labels:
    app: cart-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: cart-service
